--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,1 +1,23 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+        <img class="mx-1" src="./assets/img/banner-ico.png" width="45" height="45" alt="spotify-logo">
+        <a class="navbar-brand" href="#">SpotiTx App</a>
+
+       <!--  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+ -->
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" [routerLink]="['/home']">Home</a>
+                </li>
+                <li class="nav-item " routerLinkActive="active">
+                    <a class="nav-link " [routerLink]="['/search/:searchTerm']" outerLinkActive="active">Search</a>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
