problem no images solved with pipe: noimg

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -10,7 +10,7 @@
 
 
         <div *ngFor="let artist of artists" class="card  m-3">
-            <img [src]=" artist.images[0].url " class="card-img-top " alt={{artist.name}}>
+            <img [src]=" artist.images | noimg" class="card-img-top " alt={{artist.name}}>
             <div class=" card-body ">
                 <h5 class="card-title ">{{artist.name}}</h5>
 
