--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
 
         <div *ngFor="let album of newReleases" class="card m-1">
-            <img [src]=" album.images[0].url " class="card-img-top " alt={{album.name}}>
+            <img [src]=" album.images | noimg" class="card-img-top " alt={{album.name}}>
             <div class=" card-body ">
                 <h5 class="card-title ">{{album.name}}</h5>
                 <p *ngFor="let artist of album.artists " class="card-text d-inline "><span class="badge rounded-pill bg-primary ">{{artist.name}}</span></p>
