top-tracks in component artist

--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -15,3 +15,38 @@
     </div>
 
 </div>
+
+
+<div class="row m-5 ">
+    <div class="col">
+        <table class="table text-white">
+            <thead>
+                <tr>
+
+                    <th>Picture</th>
+                    <th>Album</th>
+                    <th>Track</th>
+                    <th>Preview</th>
+
+                </tr>
+
+            </thead>
+            <tbody>
+                <tr *ngFor="let track of topTracks">
+
+                    <td>
+                        <img [src]="track.album.images[0].url" class="img-thumb" alt="">
+                    </td>
+                    <td>{{track.album.name}}</td>
+                    <td>{{track.name}}</td>
+                    <td>
+                        <audio [src]="track.preview_url" controls></audio>
+                    </td>
+                </tr>
+
+            </tbody>
+
+        </table>
+    </div>
+
+</div>
