--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -40,7 +40,8 @@
                     <td>{{track.album.name}}</td>
                     <td>{{track.name}}</td>
                     <td>
-                        <audio [src]="track.preview_url" controls></audio>
+                        <!-- <audio [src]="track.preview_url" controls></audio> -->
+                        <iframe [src]="track.uri | domsec" width="300" heigh="80" frameborder="0" allowtransparency="true" allow="encrypted-media" class="widget"></iframe>
                     </td>
                 </tr>
 
