--- a/src/styles.css
+++ b/src/styles.css
@@ -32,8 +32,13 @@ hr {
 }
 
 .img-thumb {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
+}
+
+.widget {
+    width: 300px;
+    height: 75px;
 }
 
 
