--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,11 @@
 <app-loading *ngIf="loading"></app-loading>
+
+<div *ngIf="error" class="alert alert-danger animated fadeIn">
+
+    <h3>Error</h3>
+    <p>{{messageError}}</p>
+
+</div>
+
 <app-card [items]="newReleases">
 </app-card>
